--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <h3 class="text-2xl font-semibold mb-6">Featured Products</h3>
       <div class="grid md:grid-cols-3 gap-6">
         <div class="bg-white p-4 shadow rounded">
-          <img src="https://via.placeholder.com/300x200" alt="Product 1" class="mb-4">
+          <img src="brake1.png" alt="Product 1" class="mb-4">
           <h4 class="text-xl font-bold">Brake Pads</h4>
           <p class="mt-2 text-gray-600">High-performance brake pads for all vehicle types.</p>
         </div>
         <div class="bg-white p-4 shadow rounded">
-          <img src="https://via.placeholder.com/300x200" alt="Product 2" class="mb-4">
+          <img src="air1.png" alt="Product 2" class="mb-4">
           <h4 class="text-xl font-bold">Oil Filters</h4>
           <p class="mt-2 text-gray-600">Reliable filters to keep your engine clean and smooth.</p>
         </div>
         <div class="bg-white p-4 shadow rounded">
-          <img src="https://via.placeholder.com/300x200" alt="Product 3" class="mb-4">
+          <img src="batt.png" alt="Product 3" class="mb-4">
           <h4 class="text-xl font-bold">Car Batteries</h4>
           <p class="mt-2 text-gray-600">Long-lasting batteries for a reliable start every time.</p>
         </div>
