--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <header class="bg-blue-900 text-white p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">MotorNest Auto Parts</h1>
-      <nav class="space-x-4">
-        <a href="#" class="hover:underline">Home</a>
-        <a href="#products" class="hover:underline">Products</a>
-        <a href="#about" class="hover:underline">About</a>
-        <a href="#contact" class="hover:underline">Contact</a>
-      </nav>
+     <nav class="space-x-4">
+  <a href="index.html" class="hover:underline">Home</a>
+  <a href="#products" class="hover:underline">Products</a>
+  <a href="#about" class="hover:underline">About</a>
+  <a href="contact.html" class="hover:underline">Contact</a>
+  <a href="privacy.html" class="hover:underline">Privacy</a>
+  <a href="cookies.html" class="hover:underline">Cookies</a>
+  <a href="terms.html" class="hover:underline">Terms</a>
+</nav>
     </div>
   </header>
 
@@ -74,8 +77,15 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-blue-900 text-white text-center p-4 mt-12">
-    <p>&copy; 2025 MotorNest Auto Parts. All rights reserved.</p>
-  </footer>
+  <footer style="margin-top: 40px; text-align: center; background: #1e3a8a; color: white; padding: 10px;">
+  <p>&copy; 2025 MotorNest Auto Parts. All rights reserved.</p>
+  <nav>
+    <a href="index.html" style="color: #fff; margin: 0 10px;">Home</a>
+    <a href="privacy.html" style="color: #fff; margin: 0 10px;">Privacy</a>
+    <a href="cookies.html" style="color: #fff; margin: 0 10px;">Cookies</a>
+    <a href="terms.html" style="color: #fff; margin: 0 10px;">Terms</a>
+    <a href="contact.html" style="color: #fff; margin: 0 10px;">Contact</a>
+  </nav>
+</footer>
 </body>
 </html>
