--- a/privacy.html
+++ b/privacy.html
@@ -4,26 +4,44 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - MotorNest Auto Parts</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Privacy Policy</h1>
-  <p>Last updated: [Insert Date]</p>
-  <p>At MotorNest Auto Parts, we value your privacy. This policy outlines how we collect, use, and protect your personal information.</p>
+<body class="bg-gray-100 text-gray-800">
+  <div class="max-w-4xl mx-auto p-6 bg-white mt-10 rounded shadow">
+    <h1 class="text-3xl font-bold mb-4">Privacy Policy</h1>
+    <p class="text-sm text-gray-500 mb-4">Last updated: May 11, 2025</p>
 
-  <h2>Information We Collect</h2>
-  <ul>
-    <li>Personal identification information (Name, email address, phone number, etc.)</li>
-    <li>Browsing and order history on our website</li>
-  </ul>
+    <p class="mb-4">At MotorNest Auto Parts, your privacy is a top priority. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services. Please read this policy carefully to understand our views and practices regarding your personal data and how we will treat it.</p>
 
-  <h2>How We Use Your Information</h2>
-  <ul>
-    <li>To process transactions and provide customer support</li>
-    <li>To improve our website and services</li>
-    <li>To send promotional emails (only if you opt-in)</li>
-  </ul>
+    <p class="mb-4">By using our website, you agree to the collection and use of information in accordance with this policy. The data we collect is used to improve the functionality of our services, provide personalized customer experiences, and support administrative and promotional efforts. We ensure that any data we collect is treated with the highest degree of care and confidentiality.</p>
 
-  <h2>Contact</h2>
-  <p>If you have any questions about this Privacy Policy, contact us at support@motornest.com.</p>
+    <p class="mb-4">Our website may contain links to third-party websites and services that are not operated by us. If you click on a third-party link, you will be directed to that third party’s site. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services. We encourage you to review the privacy policies of every site you visit.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Information We Collect</h2>
+    <p class="mb-4">We collect various types of information in a variety of ways to provide and improve our service to you. The types of data we collect may include, but are not limited to, personally identifiable information, such as your name, email address, mailing address, and phone number. We may also collect non-personal information, including your IP address, browser type, and access times, to help diagnose problems with our server and to administer our site more effectively.</p>
+    <ul class="list-disc ml-6 mb-4">
+      <li>Personal identification information (name, email address, phone number, etc.)</li>
+      <li>Order history and transaction details</li>
+      <li>Technical data including IP address, browser type, and device information</li>
+      <li>Cookies and usage data for analytics and service improvements</li>
+    </ul>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">How We Use Your Information</h2>
+    <ul class="list-disc ml-6 mb-4">
+      <li>To process and manage purchases and orders</li>
+      <li>To communicate with you, including customer support</li>
+      <li>To personalize your experience and offer relevant promotions</li>
+      <li>To improve website performance and user experience</li>
+      <li>To comply with legal obligations and prevent fraud</li>
+    </ul>
+
+    <p class="mb-4">We do not sell, trade, or rent your personal identification information to others. However, we may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates, and advertisers for the purposes outlined above.</p>
+
+    <p class="mb-4">We adopt appropriate data collection, storage, and processing practices and security measures to protect against unauthorized access, alteration, disclosure, or destruction of your personal information, username, password, transaction information, and data stored on our site.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Contact</h2>
+    <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+    <p class="mt-2">📧 <a href="mailto:support@motornest.com" class="text-blue-600 underline">support@motornest.com</a></p>
+  </div>
 </body>
 </html>
