--- a/terms.html
+++ b/terms.html
@@ -4,21 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms and Conditions - MotorNest Auto Parts</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Terms and Conditions</h1>
-  <p>Welcome to MotorNest Auto Parts. By using our website, you agree to comply with and be bound by the following terms and conditions.</p>
+<body class="bg-gray-100 text-gray-800">
+  <div class="max-w-4xl mx-auto p-6 bg-white mt-10 rounded shadow">
+    <h1 class="text-3xl font-bold mb-4">Terms and Conditions</h1>
+    <p class="text-sm text-gray-500 mb-4">Last updated: May 11, 2025</p>
 
-  <h2>Use of the Site</h2>
-  <p>You agree to use this website only for lawful purposes and not to engage in any activity that may harm the website or its users.</p>
+    <p class="mb-4">Welcome to MotorNest Auto Parts. These Terms and Conditions govern your use of our website, located at <strong>motornest.com</strong>, and any related services we provide. By accessing our site, you agree to these terms in full. If you disagree with any part of these terms, please do not use our website.</p>
 
-  <h2>Intellectual Property</h2>
-  <p>All content on this site is the property of MotorNest Auto Parts and may not be copied or reused without permission.</p>
+    <h2 class="text-xl font-semibold mt-6 mb-2">Use of Website</h2>
+    <p class="mb-4">The content of the pages of this website is for your general information and use only. It is subject to change without notice. You must not misuse this website by introducing viruses, trojans, or any other malicious or technologically harmful material. Unauthorized use of this website may give rise to a claim for damages and/or be a criminal offense.</p>
 
-  <h2>Limitation of Liability</h2>
-  <p>MotorNest is not liable for any damages resulting from the use or inability to use the website.</p>
+    <h2 class="text-xl font-semibold mt-6 mb-2">Intellectual Property</h2>
+    <p class="mb-4">All content included on this site, such as text, graphics, logos, images, product names, and software, is the property of MotorNest Auto Parts or its content suppliers and protected by intellectual property laws. You may not reproduce, duplicate, copy, sell, resell, or exploit any portion of the website without express written permission.</p>
 
-  <h2>Changes to Terms</h2>
-  <p>We reserve the right to modify these terms at any time. Continued use of the site constitutes acceptance of the new terms.</p>
+    <h2 class="text-xl font-semibold mt-6 mb-2">Product Descriptions & Pricing</h2>
+    <p class="mb-4">We strive to ensure that all product descriptions and prices on our site are accurate. However, errors may occur. If we discover an error in the pricing of any goods you have ordered, we will inform you as soon as possible and give you the option of reconfirming the order at the correct price or canceling it.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Limitation of Liability</h2>
+    <p class="mb-4">To the maximum extent permitted by law, MotorNest Auto Parts shall not be liable for any indirect, incidental, special, consequential, or punitive damages, including without limitation, loss of profits, data, use, or goodwill, resulting from (i) your use or inability to use the service; (ii) any unauthorized access to or use of our servers; or (iii) any bugs, viruses, trojans, or the like that may be transmitted to or through our website by any third party.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">User Accounts</h2>
+    <p class="mb-4">When you create an account with us, you must provide information that is accurate, complete, and current. Failure to do so constitutes a breach of the Terms, which may result in immediate termination of your account. You are responsible for safeguarding the password that you use to access the website and for any activities or actions under your password.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Modifications</h2>
+    <p class="mb-4">MotorNest Auto Parts reserves the right to revise these Terms and Conditions at any time without prior notice. By continuing to use the website after such changes are made, you agree to be bound by the revised terms.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Governing Law</h2>
+    <p class="mb-4">These terms and your use of the website are governed by and construed in accordance with the laws of the country or state in which MotorNest Auto Parts operates. You agree to submit to the exclusive jurisdiction of the courts in that location.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Contact Us</h2>
+    <p>If you have any questions about these Terms and Conditions, please contact us at <a href="mailto:support@motornest.com" class="text-blue-600 underline">support@motornest.com</a>.</p>
+  </div>
 </body>
 </html>
