--- a/cookies.html
+++ b/cookies.html
@@ -4,22 +4,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookies Policy - MotorNest Auto Parts</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Cookies Policy</h1>
-  <p>MotorNest Auto Parts uses cookies to enhance your browsing experience. By using our site, you agree to our use of cookies.</p>
+<body class="bg-gray-100 text-gray-800">
+  <div class="max-w-4xl mx-auto p-6 bg-white mt-10 rounded shadow">
+    <h1 class="text-3xl font-bold mb-4">Cookies Policy</h1>
+    <p class="text-sm text-gray-500 mb-4">Last updated: May 11, 2025</p>
 
-  <h2>What Are Cookies?</h2>
-  <p>Cookies are small text files stored on your device to help websites remember your preferences and improve functionality.</p>
+    <p class="mb-4">MotorNest Auto Parts uses cookies to enhance your browsing experience and to provide tailored content, including advertising. By using our website, you consent to the use of cookies in accordance with this Cookies Policy.</p>
 
-  <h2>How We Use Cookies</h2>
-  <ul>
-    <li>Remember user preferences and login details</li>
-    <li>Track website traffic and usage statistics</li>
-    <li>Deliver personalized content and advertisements</li>
-  </ul>
+    <h2 class="text-xl font-semibold mt-6 mb-2">What Are Cookies?</h2>
+    <p class="mb-4">Cookies are small text files that are placed on your device by websites you visit. They are widely used to make websites work, or work more efficiently, as well as to provide information to the website owners.</p>
 
-  <h2>Managing Cookies</h2>
-  <p>You can disable cookies in your browser settings. However, doing so may affect some functionality on our site.</p>
+    <h2 class="text-xl font-semibold mt-6 mb-2">How We Use Cookies</h2>
+    <ul class="list-disc ml-6 mb-4">
+      <li>To remember your preferences and settings</li>
+      <li>To keep you signed in between sessions</li>
+      <li>To analyze how our site is used (performance and analytics)</li>
+      <li>To deliver relevant advertisements and promotions</li>
+      <li>To enhance overall user experience</li>
+    </ul>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Types of Cookies We Use</h2>
+    <ul class="list-disc ml-6 mb-4">
+      <li><strong>Essential cookies:</strong> Necessary for the website to function properly. These cookies enable core functionalities such as security, network management, and accessibility.</li>
+      <li><strong>Performance cookies:</strong> Help us understand how visitors interact with our website by collecting and reporting information anonymously.</li>
+      <li><strong>Functional cookies:</strong> Allow the website to remember choices you make (like language or region) and provide enhanced, more personalized features.</li>
+      <li><strong>Targeting/Advertising cookies:</strong> These cookies track browsing habits and are used to deliver advertisements more relevant to you and your interests.</li>
+    </ul>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Third-Party Cookies</h2>
+    <p class="mb-4">We may allow trusted third parties to place cookies on our website to serve you personalized content and ads. These cookies are subject to the respective privacy policies of these external services, which may include Google Ads, Facebook Pixel, or analytics platforms such as Google Analytics.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Managing Cookies</h2>
+    <p class="mb-4">Most web browsers allow you to control cookies through their settings preferences. You can set your browser to refuse all cookies or to alert you when cookies are being sent. Please note that disabling or rejecting cookies may affect the functionality of certain features on our website and limit your user experience.</p>
+
+    <p class="mb-4">For more detailed information on how to manage cookies, you may refer to your browser’s help documentation or visit websites like <a href="https://www.aboutcookies.org/" class="text-blue-600 underline" target="_blank">AboutCookies.org</a> for general guidance.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Changes to This Policy</h2>
+    <p class="mb-4">MotorNest Auto Parts may update this Cookies Policy from time to time to reflect changes in the law, technology, or our practices. When we do, we will revise the “Last updated” date at the top of the page. We encourage you to check this page regularly to stay informed about how we use cookies.</p>
+
+    <h2 class="text-xl font-semibold mt-6 mb-2">Contact</h2>
+    <p>If you have any questions or concerns about this Cookies Policy, please contact us at <a href="mailto:support@motornest.com" class="text-blue-600 underline">support@motornest.com</a>.</p>
+  </div>
 </body>
 </html>
