--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,20 @@
   <title>Contact Us - MotorNest Auto Parts</title>
 </head>
 <body>
- <section id="contact" class="py-12 bg-gray-200">
-    <div class="container mx-auto text-center">
-      <h3 class="text-2xl font-semibold mb-4">Contact Us</h3>
-      <p class="mb-4">Have questions? Reach out to us at <a href="mailto:support@motornest.com" class="text-blue-700 underline">support@motornest.com</a></p>
-      <form class="max-w-md mx-auto bg-white p-6 rounded shadow">
-        <input type="text" placeholder="Your Name" class="w-full p-2 mb-4 border rounded">
-        <input type="email" placeholder="Your Email" class="w-full p-2 mb-4 border rounded">
-        <textarea placeholder="Your Message" class="w-full p-2 mb-4 border rounded h-32"></textarea>
-        <button type="submit" class="bg-blue-900 text-white px-4 py-2 rounded">Send Message</button>
-      </form>
-    </div>
-  </section>
+  <h1>Contact Us</h1>
+  <p>Have questions or need support? Reach out to us!</p>
+
+  <form action="mailto:support@motornest.com" method="post" enctype="text/plain">
+    <label for="name">Your Name:</label><br />
+    <input type="text" id="name" name="name" required /><br />
+
+    <label for="email">Your Email:</label><br />
+    <input type="email" id="email" name="email" required /><br />
+
+    <label for="message">Your Message:</label><br />
+    <textarea id="message" name="message" rows="5" required></textarea><br />
+
+    <button type="submit">Send</button>
+  </form>
 </body>
 </html>
