--- a/index.html
+++ b/index.html
@@ -93,6 +93,73 @@
   </p>
 </section>
 
+<section class="mt-10">
+  <h2 class="text-2xl font-bold mb-4">Customer Reviews</h2>
+  <div class="space-y-6">
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★★</span>
+        <p class="ml-2 text-sm text-gray-500">5/5</p>
+      </div>
+      <p class="font-semibold">John D.</p>
+      <p class="text-gray-700">"MotorNest has been a game-changer for my car restoration projects. I’ve found hard-to-find parts for my vintage Mustang that no one else had in stock. Fast shipping, great customer service, and top-notch quality." </p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★☆</span>
+        <p class="ml-2 text-sm text-gray-500">4/5</p>
+      </div>
+      <p class="font-semibold">Samantha L.</p>
+      <p class="text-gray-700">"Great selection of auto parts! I had a few questions about compatibility, and the support team was incredibly helpful in guiding me to the right products. The only downside was a slight delay in delivery, but everything else was perfect."</p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★★</span>
+        <p class="ml-2 text-sm text-gray-500">5/5</p>
+      </div>
+      <p class="font-semibold">Carlos G.</p>
+      <p class="text-gray-700">"I’ve been using MotorNest for years and I’m always impressed with their consistent quality and excellent service. They have all the parts I need for my off-road truck. Highly recommend!"</p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★★</span>
+        <p class="ml-2 text-sm text-gray-500">5/5</p>
+      </div>
+      <p class="font-semibold">Ashley M.</p>
+      <p class="text-gray-700">"Excellent customer service! The team at MotorNest helped me find the perfect brake pads for my car after I gave them my VIN. I’m so impressed with the personal touch and attention to detail!"</p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★☆</span>
+        <p class="ml-2 text-sm text-gray-500">4/5</p>
+      </div>
+      <p class="font-semibold">Daniel T.</p>
+      <p class="text-gray-700">"Good overall experience. The part I ordered was exactly what I needed, and I was impressed by how easy it was to navigate the website. Would love to see more detailed install instructions on some products."</p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★★</span>
+        <p class="ml-2 text-sm text-gray-500">5/5</p>
+      </div>
+      <p class="font-semibold">Benjamin R.</p>
+      <p class="text-gray-700">"Amazing experience! I ordered a set of LED headlights for my Jeep, and they arrived quicker than expected. They fit perfectly, and the quality is outstanding. Definitely will buy from MotorNest again!"</p>
+    </div>
+
+    <div class="bg-gray-50 p-6 rounded-lg shadow-md">
+      <div class="flex items-center mb-4">
+        <span class="text-yellow-500 text-xl">★★★★★</span>
+        <p class="ml-2 text-sm text-gray-500">5/5</p>
+      </div>
+      <p class="font-semibold">Emily K.</p>
+      <p class="text-gray-700">"I had an issue with my first order, but MotorNest's customer service was incredible in resolving it. They quickly sent me a replacement part, and I couldn’t be happier with the quality and efficiency!"</p>
+    </div>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section id="contact" class="py-12 bg-gray-200">
