--- a/cookies.html
+++ b/cookies.html
@@ -59,6 +59,17 @@
   </div>
 </div>
 
+<!-- Cookie Consent Dialog -->
+<div id="cookieConsent" class="fixed inset-0 bg-black bg-opacity-50 flex items-end md:items-center justify-center z-50">
+  <div class="bg-white p-6 rounded shadow-lg max-w-md w-full text-center">
+    <h2 class="text-xl font-semibold mb-2">We use cookies 🍪</h2>
+    <p class="mb-4 text-sm text-gray-600">MotorNest Auto Parts uses cookies to improve your browsing experience, personalize content, and analyze site traffic. Please accept or decline to proceed.</p>
+    <div class="flex justify-center space-x-4">
+      <button onclick="handleCookies(true)" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Accept</button>
+      <button onclick="handleCookies(false)" class="bg-gray-300 text-gray-800 px-4 py-2 rounded hover:bg-gray-400">Decline</button>
+    </div>
+  </div>
+</div>
 <script>
   function handleCookies(accepted) {
     localStorage.setItem('cookiesAccepted', accepted);
@@ -72,6 +83,5 @@
     }
   };
 </script>
-
 </body>
 </html>
