--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ border-radius:5px;
 <body>
 <center>
   <div class="container">
-<img src="ebay.PNG" style="widht:200px;height:100px;"></img>
+<img src="ebay.png" style="widht:200px;height:100px;"></img>
     <h1>eBay Customer Service</h1>
 	<h2>Solve Your Query Now</h2>
     <p>Resolve Your Queries by contacting on the given Phone number for Support</p>
