--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 <body>
-  <center><img src="bay.e.com.png" alt="bay.e Logo" style="width: 200px; height: 100px;"></center>
+  <center><img src="ebay.png" alt="bay.e Logo" style="width: 200px; height: 100px;"></center>
   <h1>bay.e Contact</h1>
   <p>If you need assistance or have any questions about bay.e, please don't hesitate to get in touch with us. Our dedicated team is here to help.</p>
   <a class="call-button" href="tel:18887688944">Call Us: <span class="phone-number">+1-888-768-8944</span></a>
