--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <center><img src="ebay.png" alt="ebay Logo" style="width: 200px; height: 100px;"></center>
-  <h1>ebay Contact</h1>
+  <h1>ebay Customer Service</h1>
   <p>If you need assistance or have any questions about ebay, please don't hesitate to get in touch with us. Our dedicated team is here to help.</p>
   <a class="call-button" href="tel:18887688944">Call Us: <span class="phone-number">+1-888-768-8944</span></a>
   
